Web Inspector: fix closure compilation warnings caused by setVariableValue change https://bugs.webkit.org/show_bug.cgi?id=109488

Patch by Peter Rybin <prybin@chromium.org> on 2013-02-14
Reviewed by Pavel Feldman.

Annotations are fixed as required by closure compiler.
Parameters in Inspector.json are reordered as required.

* inspector/InjectedScriptExterns.js:
(InjectedScriptHost.prototype.setFunctionVariableValue):
(JavaScriptCallFrame.prototype.setVariableValue):
* inspector/InjectedScriptSource.js:
(.):
* inspector/Inspector.json:
* inspector/InspectorDebuggerAgent.cpp:
(WebCore::InspectorDebuggerAgent::setVariableValue):
* inspector/InspectorDebuggerAgent.h:
(InspectorDebuggerAgent):

Canonical link: https://commits.webkit.org/128108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142888 268f45cc-cd09-0410-ab3c-d52691b4dbfc