Source/WebCore/inspector/InjectedScriptExterns.js
@@ -82,6 +82,14 @@ InjectedScriptHost.prototype.getEventListeners = function(object) { }
  */
 InjectedScriptHost.prototype.evaluate = function(expression) { }
 
+/**
+ * @param {function(...)} fun
+ * @param {number} scopeNumber
+ * @param {string} variableName
+ * @param {*} newValue
+ */
+InjectedScriptHost.prototype.setFunctionVariableValue = function(fun, scopeNumber, variableName, newValue) {}
+
 
 /**
  * @constructor
@@ -104,6 +112,13 @@ function JavaScriptCallFrame()
 JavaScriptCallFrame.prototype.scopeType = function(index) { }
 
 JavaScriptCallFrame.prototype.restart = function() { }
+
+/**
+ * @param {number} scopeNumber
+ * @param {string} variableName
+ * @param {*} newValue
+ */
+JavaScriptCallFrame.prototype.setVariableValue = function(scopeNumber, variableName, newValue) {}
 
 /**
  * @constructor
